--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tsparticles": "^2.3.3",
+    "slick-carousel": "^1.8.1",
+    "tsparticles": "^2.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
