--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "firebase": "^9.12.1",
+    "framer": "^2.2.1",
+    "motion": "^10.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
