--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.2.0",
     "firebase": "^9.12.1",
     "framer": "^2.2.1",
+    "framer-motion": "^7.6.7",
     "motion": "^10.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
